--- a/index.html
+++ b/index.html
@@ -3,6 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Matheus Fialho - Portfólio</title>
+    <style>
+        .social-icons img {
+            width: 32px;
+            height: 32px;
+            margin-right: 10px;
+        }
+    </style>
 </head>
 <body>
     <header>
@@ -41,12 +48,18 @@
 
     <section>
         <h2>Formas de Contato:</h2>
-        <ul>
-            <li><a href="https://www.linkedin.com/in/matheusgomesfialhomoreira" target="_blank">LinkedIn</a></li>
-            <li><a href="https://www.instagram.com/matheusgfialho" target="_blank">Instagram</a></li>
-            <li><a href="https://github.com/FialhoMath" target="_blank">GitHub</a></li>
-            <li>Telefone: (81) 99209-8610</li>
-        </ul>
+        <div class="social-icons">
+            <a href="https://www.linkedin.com/in/seuusuario" target="_blank">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
+            </a>
+            <a href="https://www.instagram.com/seuusuario" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+            </a>
+            <a href="https://github.com/seuusuario" target="_blank">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+            </a>
+        </div>
+        <p>Telefone: (81) 99209-8610</p>
     </section>
 </body>
 </html>
