--- a/Certificados.html
+++ b/Certificados.html
@@ -1,42 +1,36 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
-    <head><meta charset="UTF-8">
-        <title>Certificados - Matheus Fialho</title>
-    </head>
-    <body>
-        <header>
-            <h1> Certificados Adquiridos por Matheus Fialho </h1>
-        </header>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Certificados - Matheus Fialho</title>
+    <link rel="stylesheet" href="organizacao.css">
+</head>
+<body>
+    <header>
+        <h1>Certificados Adquiridos por Matheus Fialho</h1>
+    </header>
 
-        <section>
-            <h3>
-                Curso de Hardware da CISCO Academy 
-            </h3>
-        </section>
+    <section>
+        <h2>Curso de Hardware da CISCO Academy</h2>
+        <img src="Hardware.jpg" alt="Certificado de Hardware">
+    </section>
 
-         <section>
-            <h3>
-                Curso de Python 1 da CISCO Academy
-            </h3>
-        </section>
+    <section>
+        <h2>Curso de Python 1 da CISCO Academy</h2>
+        <img src="Python1.jpg" alt="Certificado de Python 1">
+    </section>
 
-         <section>
-            <h3>
-                Curso de JavaScript 1 da CISCO Academy
-            </h3>
-        </section>
+    <section>
+        <h2>Curso de JavaScript 1 da CISCO Academy</h2>
+        <img src="JavaScript1.jpg" alt="Certificado de JavaScript 1">
+    </section>
 
-    
+    <footer>
+        <a href="index.html"> Voltar para a página inicial</a>
+    </footer>
 
+    <script src="main.js"></script>
 
-
-
-    </body>
-
-
-
-
-
-
-
+</body>
 </html>
