--- a/Projetos.html
+++ b/Projetos.html
@@ -2,23 +2,32 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title> Projetos - Matheus Fialho </title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Projetos - Matheus Fialho</title>
+    <link rel="stylesheet" href="organizacao.css">
 </head>
-
 <body>
-    <header> 
-    <h1>Projetos Feitos por Matheus Fialho </h1>
+    <header>
+        <h1>Projetos Feitos por Matheus Fialho</h1>
     </header>
 
     <section>
-    <h1> Animal Quest </h1>
-    <p> Animal Quest foi desenvolvido com o objetivo de estimular habilidades cognitivas, em especial o raciocínio lógico de pessoas com Síndrome de Down. O jogo consiste em uma série de desafios que envolvem cores, animais e a memória do jogador. </p>
+        <h2>Animal Quest</h2>
+        <p>Animal Quest foi desenvolvido com o objetivo de estimular habilidades cognitivas, em especial o raciocínio lógico de pessoas com Síndrome de Down. O jogo consiste em uma série de desafios que envolvem cores, animais e a memória do jogador.</p>
+        <a href="https://sites.google.com/cesar.school/g6-animalquest/status-report-2" target="_blank">Site do Animal Quest</a><br>
+        <a href="https://github.com/BrunoAU/Animal-Quest" target="_blank">Repositório do Animal Quest</a>
     </section>
 
     <section>
-    <h1> Sistema "Vida Pet" </h1>
-    <p> Um sistema que ajuda a organizar os cuidados com seus animais de estimação, mantendo a saúde e a rotina sempre atualizados.</p>
+        <h2>Sistema "Vida Pet"</h2>
+        <p>Um sistema que ajuda a organizar os cuidados com seus animais de estimação, mantendo a saúde e a rotina sempre atualizados.</p>
+        <a href="https://github.com/FialhoMath/FpTrabalho" target="_blank">Repositório do Sistema "Vida Pet"</a>
     </section>
-</body>
 
+    <footer>
+        <a href="index.html"> Voltar para a página inicial</a>
+    </footer>
+
+    <script src="main.js"></script>
+</body>
 </html>
