--- a/index.html
+++ b/index.html
@@ -2,31 +2,35 @@
 <html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
-    <title>Matheus Fialho - Portfólio</title>
-    <style>
-        .social-icons img {
-            width: 32px;
-            height: 32px;
-            margin-right: 10px;
-        }
-    </style>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Portfólio de Matheus Fialho</title>
+    <link rel="stylesheet" href="organizacao.css">
 </head>
 <body>
     <header>
         <h1>Seja bem-vindo ao meu primeiro site</h1>
+        <nav>
+            <ul>
+                <li><a href="#sobre">Sobre Mim</a></li>
+                <li><a href="#curso">Curso</a></li>
+                <li><a href="#interesse">Interesses</a></li>
+                <li><a href="#projetos">Projetos</a></li>
+                <li><a href="#contato">Contato</a></li>
+            </ul>
+        </nav>
     </header>
 
-    <section>
+    <section id="sobre">
         <h2>Sobre Mim</h2>
         <p>Me chamo Matheus Fialho, sou aluno de Ciência da Computação na CESAR School, atualmente finalizando o 1º período.</p>
     </section>
 
-    <section>
+    <section id="curso">
         <h2>Por que esse curso em específico?</h2>
-        <p>Sempre gostei muito mais da área digital do que da física, e isso despertou uma grande curiosidade sobre o curso. Depois da minha primeira pesquisa, eu já tinha certeza de que era o que eu queria.</p>
+        <p>Sempre gostei muito da área digital e isso ajudou a despertar uma grande curiosidade sobre o curso. Depois que eu conversei com conhecidos que trabalham na área e pesquisei bastante sobre, tive certeza que era o que queria.</p>
     </section>
 
-    <section>
+    <section id="interesse">
         <h2>Áreas de Interesse</h2>
         <ul>
             <li>Desenvolvimento de Software</li>
@@ -35,31 +39,31 @@
         </ul>
     </section>
 
-    <section>
+    <section id="projetos">
         <h2>Projetos e Certificados</h2>
-        <h3>Projetos:</h3>
         <ul>
-            <li>Animal Quest</li>
-            <li>Sistema "Vida Pet" (Projeto - FP)</li>
+            <li><a href="Projetos.html">Projetos Concluídos</a></li>
+            <li><a href="Certificados.html">Certificados Adquiridos</a></li>
         </ul>
-        <h3>Certificados:</h3>
-        <p>Certificados adquiridos</p>
     </section>
 
-    <section>
-        <h2>Formas de Contato:</h2>
+    <section id="contato">
+        <h2>Formas de Contato</h2>
         <div class="social-icons">
-            <a href="https://www.linkedin.com/in/seuusuario" target="_blank">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn">
+            <a href="https://www.linkedin.com/in/matheusgomesfialhomoreira" target="_blank">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/linkedin/linkedin-original.svg" alt="LinkedIn de Matheus">
             </a>
-            <a href="https://www.instagram.com/seuusuario" target="_blank">
-                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram">
+            <a href="https://www.instagram.com/matheusgfialho" target="_blank">
+                <img src="https://upload.wikimedia.org/wikipedia/commons/a/a5/Instagram_icon.png" alt="Instagram de Matheus">
             </a>
-            <a href="https://github.com/seuusuario" target="_blank">
-                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub">
+            <a href="https://github.com/fialhomath" target="_blank">
+                <img src="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/github/github-original.svg" alt="GitHub de Matheus">
             </a>
         </div>
         <p>Telefone: (81) 99209-8610</p>
     </section>
+
+    <script src="main.js"></script>
 </body>
 </html>
+
